overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver-deployment
spec:
  template:
    spec:
      containers:
        - name: configserver
          image: caannamalai/configserver:ashok
