overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: configserver-service
spec:
  ports:
    - port: 8888
      targetPort: 8888
