overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configserver-ingress
spec:
  rules:
    - host: staging.yourdomain.com
      http:
        paths:
          - path: /config
            pathType: Prefix
            backend:
              service:
                name: configserver-service
                port:
                  number: 8888
